# SMF

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EPIC-KICKASS-PROPOSAL.md  LAUNCH_GUIDE.md  PHASE5.md  PROJECT_PLAN.md  README.md  RELEASE_PROCESS.md  auth.py  birdeye_service.py  build.js  capacitor.config.js  capacitor.config.json  compare-endpoints.js  dexscreener_service.py  elo.py  field-analysis.js  game_loop.py  index-backup.html  index.html  leaderboard.js  manifest.json  package-lock.json  package.json  pyproject.toml  resize_splash.py  room_cleanup.py  room_manager.py  schema.sql  server.js  server.py  share-fight.js  solscan_service.py  test-name-extraction.js  test_api.py  test_birdeye.py  test_holders.py  test_solscan.py  (+2 more)
.well-known/: assetlinks.json
android/: build.gradle  capacitor.settings.gradle  keystore.properties.example
android/app/: build.gradle  capacitor.build.gradle
android/app/release/: output-metadata.json
assets/: site.webmanifest
ios/App/: Podfile
migrations/: 2026_05_boost_ledger.sql
releases/: 2026-05-26-android-mwa-fireball.md
scratch/: check_braces.js  test_utils.mjs
server/: SolscanService.js
src/: api-endpoints.js  effects.js  fighter.js  game.js  image-utils.js  input.js  live-boost-system.js  llm.js  loser-card.js  main.js  player-effects.js  prediction.js  router.js  sfx.js  solscan-trending.js  spotify-widget.js  stage-music.js  token-power-scaling.js  token-utils.js  trending-strip.js  virtual-joystick.js  voice.js  webrtc.js
tests/: test_auth.py  test_elo.py  test_server.py  webrtc.test.js
(+8 files in other folders)
