[project]
name = "stick-fighter"
version = "0.1.0"
description = "Deepgram-branded Street Fighter clone"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.15",
    "uvicorn[standard]>=0.34",
    "websockets>=15.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "deepgram-sdk>=6.0.1",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.31.0",
    "pynacl>=1.5.0",
]

[project.scripts]
dev = "uvicorn server:app --reload --port 3000"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
